<?xml version="1.0" encoding="utf-8"?>
<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="20%p"
    android:keyHeight="60dp">

    <Row>
        <Key android:keyLabel="@string/n0" android:keyEdgeFlags="left"/>
        <Key android:keyLabel="@string/n1"/>
        <Key android:keyLabel="@string/n2"/>
        <Key android:keyLabel="@string/n3"/>
        <Key android:codes="-5"
            android:keyLabel="@string/delete"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"/>
    </Row>

    <Row>
        <Key android:keyLabel="@string/n4" android:keyEdgeFlags="left"/>
        <Key android:keyLabel="@string/n5"/>
        <Key android:keyLabel="@string/n6"/>
        <Key android:keyLabel="@string/n7" />
        <Key android:codes="-1"
            android:keyLabel="Type"
            android:keyEdgeFlags="right"/>
    </Row>

    <Row>
        <Key android:keyLabel="@string/n8" android:keyEdgeFlags="left"/>
        <Key android:keyLabel="@string/n9"/>
        <Key android:keyLabel="@string/n10"/>
        <Key android:keyLabel="@string/n11"/>
        <Key android:codes="32" android:keyLabel="@string/space" android:keyEdgeFlags="right"/>
    </Row>

    <Row>
        <Key android:keyLabel="@string/n12" android:horizontalGap="0%p" android:keyEdgeFlags="left"/>
        <Key android:keyLabel="@string/n13"/>
        <Key android:keyLabel="@string/n14"/>
        <Key android:keyLabel="@string/n15"/>
        <Key android:codes="-4"
            android:keyLabel="@string/done"
            android:keyEdgeFlags="right"/>
    </Row>

</Keyboard>